--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@ ul#navigation ul li a {
 <div class="black">
 <BR ><BR class="hide-on-med-and-down"><BR class="hide-on-med-and-down"><BR class="hide-on-med-and-down"><BR class="hide-on-med-and-down"><BR class="hide-on-med-and-down"><BR class="hide-on-med-and-down"><BR class="hide-on-med-and-down"><h5 class="white-text center  scrollspy hide-on-med-and-down" style="font-family:Bahnschrift;" >Architecture is a visual art and the buildings speak for themselves - Julia Morgan</h5>
   
-    <h6 class="white-text center  scrollspy hide-on-med-and-up" style="font-family:Bahnschrift;font-size: 15px;" >Architecture is a visual art and the buildings speak for themselves - Julia Morgan</h6>
+    <h6 class="white-text center  scrollspy hide-on-med-and-up" style="font-family:Bahnschrift;font-size: 15px; padding-left: 10px;padding-right: 10px;" >Architecture is a visual art and the buildings speak for themselves - Julia Morgan</h6>
   
   <BR><BR>
   <div class="container hide-on-med-and-down" >
@@ -503,7 +503,7 @@ ul#navigation ul li a {
     <BR>
     <p class="white-text scrollspy"  style="font-size: 17px;text-align: justify;font-family:Bahnschrift;">Naomi Mehta is a budding architect who is pursuing her B.Arch. degree from the prestigious CEPT University in Ahmedabad. She lives in Mumbai and has completed her schooling from S.V.K.M’s C.N.M. school in Vile Parle. She was always good at art and has won numerous prizes and awards for her work in that sphere. She was also always great at studies and scored 98.20 % in her 10th grade and 90.80 % in her 12th HSC grade.
     </p>
-    <p class="white-text scrollspy"  style="font-size: 17px;text-align: justify;font-family:Bahnschrift;">   She secured AIR 19 in the NATA entrance test for Architecture colleges and secured her admission in the CEPT university, Ahmedabad.She always had a flair for architecture from a very young age and knew what she wanted to do. Her dream came true in 2018 when she finally decided to follow her father, Nishit Mehta’s footsteps and started her journey to become an architect.
+    <p class="white-text scrollspy"  style="font-size: 17px;text-align: justify;font-family:Bahnschrift;">   She secured AIR 19 in the NATA entrance test for Architecture colleges and secured her admission in the CEPT university, Ahmedabad. She always had a flair for architecture from a very young age and knew what she wanted to do. Her dream came true in 2018 when she finally decided to follow her father, Nishit Mehta’s footsteps and started her journey to become an architect.
         
       </p>
         
