--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@ ul#navigation ul li a {
         <div class="col s12 m6 l3 ">
         <div class="card">
             <div class="card-image waves-effect waves-block waves-light">
-              <img class="activator" src="img/9.JPG" alt="Card image cap" style="min-height: 220px;">
+              <img class="activator" src="img/9.jpg" alt="Card image cap" style="min-height: 220px;">
             </div>
             <div class="card-content">
               <span class="card-title activator black-text text-darken-3" style="font-weight: bold;font-family:Bahnschrift;">Design 1</span>
@@ -593,7 +593,7 @@ ul#navigation ul li a {
         <div class="col s12 m6 l3 ">
             <div class="card">
                 <div class="card-image waves-effect waves-block waves-light">
-                  <img class="activator" src="img/9.JPG" alt="Card image cap" style="min-height: 220px;">
+                  <img class="activator" src="img/9.jpg" alt="Card image cap" style="min-height: 220px;">
                 </div>
                 <div class="card-content">
                   <span class="card-title activator black-text text-darken-3" style="font-weight: bold;font-family:Bahnschrift;">Design 2</span>
@@ -612,7 +612,7 @@ ul#navigation ul li a {
             <div class="col s12 m6 l3 ">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
-                      <img class="activator" src="img/9.JPG" alt="Card image cap" style="min-height: 220px;">
+                      <img class="activator" src="img/9.jpg" alt="Card image cap" style="min-height: 220px;">
                     </div>
                     <div class="card-content">
                       <span class="card-title activator black-text text-darken-3" style="font-weight: bold;font-family:Bahnschrift;">Design 3</span>
@@ -631,7 +631,7 @@ ul#navigation ul li a {
                 <div class="col s12 m6 l3 ">
                     <div class="card">
                         <div class="card-image waves-effect waves-block waves-light">
-                          <img class="activator" src="img/9.JPG" alt="Card image cap" style="min-height: 220px;">
+                          <img class="activator" src="img/9.jpg" alt="Card image cap" style="min-height: 220px;">
                         </div>
                         <div class="card-content">
                           <span class="card-title activator black-text text-darken-3" style="font-weight: bold;font-family:Bahnschrift;">Design 1</span>
