--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@ ul#navigation ul li a {
     <p class="black-text">HelloHelloHello hello HelloHelloHello hello  </p>
           <h6 class="white-text left scrollspy" style="padding-left:10px; font-size: 20px;font-family:Bahnschrift;font-weight: lighter;">Aspiring Architect</h6>
           <BR><BR>
-        <p class="white-text  scrollspy" style="font-size: 17px;text-align: justify;padding:10px;font-family:Bahnschrift;">Naomi Mehta is a budding architect who is pursuing her B.Arch. degree from the prestigious CEPT University in Ahmedabad. She lives in Mumbai and has completed her schooling from S.V.K.M’s C.N.M. school in Vile Parle. She was always good at art and has won numerous prizes and awards for her work in that sphere. She was also always great at studies and scored 98.20 % in her 10th grade and 90.80 % in her 12th HSC grade. She secured AIR 19 in the NATA entrance test for Architecture colleges.</p>
+        <p class="white-text  scrollspy" style="font-size: 17px;text-align: justify;padding:10px;font-family:Bahnschrift;font-weight: lighter;">Naomi Mehta is a budding architect who is pursuing her B.Arch. degree from the prestigious CEPT University in Ahmedabad. She lives in Mumbai and has completed her schooling from S.V.K.M’s C.N.M. school in Vile Parle. She was always good at art and has won numerous prizes and awards for her work in that sphere. She was also always great at studies and scored 98.20 % in her 10th grade and 90.80 % in her 12th HSC grade. She secured AIR 19 in the NATA entrance test for Architecture colleges.</p>
             
             <BR>
             <a href="about.html">
