--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@ ul#navigation ul li a {
                   <span class="card-title activator black-text text-darken-3" style="font-weight: bold;font-family:Bahnschrift;">Design 1<i class="material-icons right">info</i></span>
                   <BR>
                     
-                        <a href="design/1.pdf" class="btn black darken-3">View</a>
+                        <a href="design1.html" class="btn black darken-3">View</a>
                 </div>
                 <div class="card-reveal">
                   <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
