--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ ul#navigation ul li a {
 
 
 
-
+<body>
 
 
   <!-- navbar -->
@@ -405,7 +405,7 @@ ul#navigation ul li a {
               
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About </a></li>
-        <li><a href="index.html#contact">Contact</a></li>
+        <li><a href="contact">Contact</a></li>
         <li><a href="">Designs</a></li>
         <li><a href="">Sketches</a></li>
         <li><a href="blogs.html">Blogs</a></li>
