--- a/social.html
+++ b/social.html
@@ -406,8 +406,8 @@ ul#navigation ul li a {
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About </a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="">Designs</a></li>
-        <li><a href="">Sketches</a></li>
+        <li><a href="designs.html">Designs</a></li>
+        <li><a href="sketches.html">Sketches</a></li>
         <li><a href="blogs.html">Blogs</a></li>
         <li><a href="sociamedia.html">Social Media</a></li>
        
