--- a/sketches.html
+++ b/sketches.html
@@ -437,7 +437,7 @@ ul#navigation ul li a {
 
 </div>
 <div class="center hide-on-med-and-up black" >
-  <img src="img/23.jpg"  width="100%"> 
+  <img src="img/23.jpg"  width="100%" height="20%"> 
 </div>
 
   <div class="hide-on-small-only" id="back">
